# mesos

./: Makefile.am  Makefile.in  configure  configure.ac
include/mesos/: mesos.hpp
src/: Makefile.am  Makefile.in
src/exec/: exec.cpp
src/tests/: master_tests.cpp
